; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_OpenSSL_FreeLock.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_OpenSSL_FreeLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ssl_lock_num = common dso_local global i64 0, align 8
@ssl_lock_obj = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @OpenSSL_FreeLock() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %12, %0
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @ssl_lock_num, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %15

6:                                                ; preds = %2
  %7 = load i32*, i32** @ssl_lock_obj, align 8
  %8 = load i64, i64* %1, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @DeleteLock(i32 %10)
  br label %12

12:                                               ; preds = %6
  %13 = load i64, i64* %1, align 8
  %14 = add i64 %13, 1
  store i64 %14, i64* %1, align 8
  br label %2

15:                                               ; preds = %2
  %16 = load i32*, i32** @ssl_lock_obj, align 8
  %17 = call i32 @Free(i32* %16)
  store i32* null, i32** @ssl_lock_obj, align 8
  %18 = call i32 @CRYPTO_set_locking_callback(i32* null)
  %19 = call i32 @CRYPTO_THREADID_set_callback(i32* null)
  ret void
}

declare dso_local i32 @DeleteLock(i32) #1

declare dso_local i32 @Free(i32*) #1

declare dso_local i32 @CRYPTO_set_locking_callback(i32*) #1

declare dso_local i32 @CRYPTO_THREADID_set_callback(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
